--- a/src/entrypoints/styles.module.css
+++ b/src/entrypoints/styles.module.css
@@ -2,7 +2,16 @@
 	display: flex;
 	flex-direction: column;
 	align-items: start;
-	gap: 5em;
+	gap: var(--spacing-l);
+}
+
+.container > button:last-child {
+	margin-top: 3em;
+}
+
+.field {
+	display: flex;
+	flex-direction: column;
 }
 
 .list {
